# consultancy-scraper

./: .gitignore  pyproject.toml  workspace.code-workspace
src/: scrapy.cfg
src/consultancy_scraper/: consultancy.json  items.py  middlewares.py  pipelines.py  settings.py
src/consultancy_scraper/spiders/: consulting_spider.py  wlw_spider.py
src/scripts/: export_csv.py  main.py
tests/: test_consultancy_scraper.py
