[tool.poetry]
name = "consultancy-scraper"
version = "0.1.0"
description = ""
authors = ["Lars Schellhas <lars.schellhas@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
